# ChangeLog for media-libs/gle
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/gle/Attic/ChangeLog,v 1.11 2004/06/24 23:01:07 agriffis Exp $

  13 Dec 2003; Guy Martin <gmsoft@gentoo.org> gle-3.0.1-r2.ebuild:
  Marked stable on hppa.

  24 Nov 2003; Aron Griffis <agriffis@gentoo.org> gle-3.0.1-r2.ebuild:
  Stable on ia64

  07 Aug 2003; Lisa Seelye <lisa@gentoo.org> gle-3.0.1-r2.ebuild:
  Changed make to emake for bug 26149

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*gle-3.0.1-r2 (21 Mar 2002)

  25 Mar 2003; Alastair Tse <liquidx@gentoo.org> gle-3.0.1-r2.ebuild:
  fix SRC_URI

  23 Feb 2003; Aron Griffis <agriffis@gentoo.org> gle-3.0.1-r2.ebuild :
  Add alpha to KEYWORDS

  21 Mar 2002; Seemant Kulleen <seemant@gentoo.org> gle-3.0.1-r2.ebuild :

  HTML documentation will not be gzipped.

*gle-3.0.1-r2 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.