@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/gle
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/gle/Attic/ChangeLog,v 1.11 2004/06/24 23:01:07 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/gle/Attic/ChangeLog,v 1.12 2004/10/05 09:55:22 eradicator Exp $
+
+  05 Oct 2004; Jeremy Huddleston <eradicator@gentoo.org>
+  gle-3.0.1-r2.ebuild:
+  Using DESTDIR to fix multilib systems.
 
   13 Dec 2003; Guy Martin <gmsoft@gentoo.org> gle-3.0.1-r2.ebuild:
   Marked stable on hppa.
